feat(filter/search): add per-field AND search filters to geofence list #4761
